Clarify conditions for activating duplicate checks in open-ended scoring documentation. Emphasize that checks should only be enabled if identical or highly similar responses are deemed implausible.

--- a/knowledge-base/quality-checks/open-ended-score.mdx
+++ b/knowledge-base/quality-checks/open-ended-score.mdx
@@ -177,9 +177,13 @@ The response is provided in a language that does not match the expected language
 
 The response is identical or highly similar to responses provided by other respondents in the survey, indicating potential data quality issues or coordinated responses.
 
+Activate the duplicate check only if identical or highly similar responses to open-ends among the interviews are implausible.
+
 ### 9. Duplicate Answer
 
 The response is identical or highly similar to another response provided by the same respondent within the survey, indicating potential lack of engagement or copy-paste behavior.
+
+Activate the duplicate check only if identical or highly similar responses to open ends within interviews are implausible.
 
 ## Use of GPT for Open-Ended Score
 
