Refine recommendation for activating duplicate checks in open-ended scoring documentation to clarify conditions under which checks should be enabled.

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -50,7 +50,7 @@ Follow these steps for a manual upload:
     - **Add a New Quality Check:**  For example, choose *Open-Ended Score*.
     - **Choose Data Points:** Select the relevant open-ended question.
     - **Determine Settings:** Add the question text, enrich it with keywords if needed, specify the allowed languages (leave empty to allow all languages), and activate or deactivate the duplication check.
-      - **Recommendation:** Keep the duplication check enabled unless duplicates are intentional (e.g., repeated questions).
+      - **Recommendation:** Activate the duplicate check only if identical or highly similar responses to open-ends among and within the interviews are implausible.
     - **Add Additional Open-Ended Questions:** Repeat as necessary, then confirm.
     - **Configure Other Quality Checks:**
       - **Grid Questions Score:** Assign a name to the data point, then select the first and last columns of the grid (minimum of 7 columns required). If the grid is not randomized, enable the **Pattern Check** to identify fraudulent click patterns beyond simple straightlining.
