Rename and update endpoint from `/v3/retryRespondents` to `/v3/recalculateRespondents`
- Changed the endpoint functionality to recalculate specific quality checks for respondents.
- Updated OpenAPI documentation with new endpoint details, including request and response structures.
- Added new documentation file for the `recalculateRespondents` endpoint and removed the old `retryRespondents` documentation.
- Updated changelogs to reflect the new endpoint and its features.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -6,12 +6,12 @@ iconType: "regular"
 ---
 
 <Update label="2025-12-02" description="v1.3.2">
-  ## Retry Respondents
+  ## Recalculate Respondents
 
-  - **Recalculate specific checks**: You can now retry specific respondents and select exactly which quality checks to recalculate (OES, GQS, TS, CHS, BAS).
+  - **Recalculate specific checks**: You can now recalculate specific respondents and select exactly which quality checks to recalculate (OES, GQS, TS, CHS, BAS).
   - **Cost Efficiency**: Credits are only deducted for the specific checks you select.
   - **Granular control**: Provides flexibility to fix data issues or apply new quality standards to a subset of respondents.
-  - **Updated configuration**: Retry operations can include options to update allowed languages for OES, activate duplicate detection, and enable pattern checks for GQS during recalculation.
+  - **Updated configuration**: Recalculation operations can include options to update allowed languages for OES, activate duplicate detection, and enable pattern checks for GQS.
 </Update>
 
 <Update label="2025-11-15" description="v1.3.0">
