--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -6,11 +6,11 @@ iconType: "regular"
 ---
 
 <Update label="2025-12-02" description="v3.1.0">
-  ## New Endpoint: Retry Respondents
+  ## New Endpoint: Recalculate Respondents
 
-  - <code style={{ color: "green" }}> POST /v3/retryRespondents </code> - Retry specific quality checks for a list of respondents within a survey.
+  - <code style={{ color: "green" }}> POST /v3/recalculateRespondents </code> - Recalculate specific quality checks for a list of respondents within a survey.
 
-  See the [endpoint docs](/api-reference/endpoints/v3/retryRespondents) for request/response details.
+  See the [endpoint docs](/api-reference/endpoints/v3/recalculateRespondents) for request/response details.
 </Update>
 
 <Update label="2025-11-17" description="v3">
