chore: Add note regarding modular calculation applicability for licenses purchased before December 2025

--- a/knowledge-base/miscellaneous/redem-credits.mdx
+++ b/knowledge-base/miscellaneous/redem-credits.mdx
@@ -21,6 +21,7 @@ ReDem offers two credit calculation methods:
   </Card>
 
   <Card title="Modular Calculation" icon="sliders">
+    <Note>Only applicable to licenses purchased before December 2025.</Note>
     The **minimum cost is 5 credits per respondent**, with additional credits required depending on the quality checks you select. This flexible approach enables you to balance costs while ensuring your desired level of data quality.
   </Card>
 </CardGroup>
