--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -5,6 +5,14 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2026-01-02" description="v3.1.1">
+  ## New Attribute: Respondent Attributes
+
+  - <code style={{ color: "green" }}> POST /v3/addRespondent </code> - You can now add additional attributes to the respondent, such as the panel the respondent belongs to. These values will be available in the ReDem App and in the result export and can be used for further analysis of your data.
+
+  See the [endpoint docs](/api-reference/endpoints/v3/addRespondent#body-respondent-attributes) for further details.
+</Update>
+
 <Update label="2025-12-02" description="v3.1.0">
   ## New Endpoint: Recalculate Respondents
 
