Add ReDem manual upload example file and update documentation link to reference the new Excel format

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -60,7 +60,7 @@ Must include:
 Do not include additional information in the codebook (e.g., filter paths, metadata descriptions), as this may interfere with processing.
 </Warning>
 
-[Sample File Format](/assets/ReDem-Manual-Upload-Example.csv)
+[Sample File Format](/assets/ReDem-Manual-Upload-Example.xlsx)
 
 Once your file is prepared, you can proceed with the import process either **manually** or with **AI assistance**.
 
