--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,15 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2026-01-09" description="v1.4.3">
+  ## Decipher Import Assistant
+  - The assistant’s output is now more accurate, requiring fewer manual adjustments to integrate with the ReDem API.
+  ## Data Import 
+  - **Reliability**: - The manual data import process can now handle even larger files more reliably, reducing the likelihood of errors.
+  - **Speed**: Individual steps in the import process have been optimized, significantly reducing upload times, especially for larger files.
+  - **Bugfixes**: In some cases, an error message was displayed on the survey page after the import process completed instead of the progress bar. This issue has now been resolved.
+</Update>
+
 <Update label="2026-01-02" description="v1.4.2">
   ## Respondent Attributes: Support for your own custom attributes
   - You can now add any custom attributes to the respondent during the import process. These values will be available in the ReDem App and in the result export and can be used for further analysis of your data.
