Replace old app.beta url

--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -9,7 +9,7 @@ iconType: "regular"
 
 To start using ReDem, simply create your account. The setup process is quick and straightforward:
 
-1. Go to the [registration page ](https://app.beta.redem.io/auth/register).
+1. Go to the [registration page ](https://app.redem.io/auth/register).
 
 2. Enter your organization’s name, your first and last name, email address, and choose a password.
 
