--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,17 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2026-01-19" description="v1.4.4">
+  ## Filtering Respondents by Attributes
+  - In the Respondent Table, you can now filter the respondents by their attributes to e.g. view all respondents from a specific panel.
+  - In the Data Visualization tab you can filter for specific attributes as well, giving you in depth insights into the data.
+  ## Grid Quality Score
+  - The overall Grid Quality Score now takes into account the number of items in the grid. This means longer grids have a higher impact on the overall score.
+  ## Minor improvements
+  - **Data Import**: Duplicate header rows are now consistently flagged as errors as soon as possible.
+  - **Adding additional respondents**: It could rarely happen that no or only few respondents were added to the survey. This issue is now resolved.
+</Update>
+
 <Update label="2026-01-09" description="v1.4.3">
   ## Decipher Import Assistant
   - The assistant’s output is now more accurate, requiring fewer manual adjustments to integrate with the ReDem API.
