Clarify Time Score description to specify deviation from time patterns of other respondents

--- a/knowledge-base/quality-checks/time-score.mdx
+++ b/knowledge-base/quality-checks/time-score.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 ## What is the Time Score?
 
-The Time Score allows you to evaluate how much time respondents spend on different parts of the questionnaire—such as the total interview duration, time per section, or time per question. It flags responses that significantly deviate from expected time patterns, helping you detect rushed or overly slow behavior.
+The Time Score allows you to evaluate how much time respondents spend on different parts of the questionnaire—such as the total interview duration, time per section, or time per question. It flags responses that significantly deviate from time patterns of other respondents, helping you detect rushed or overly slow behavior.
 
 By identifying these anomalies, the Time Score helps improve the overall reliability of your survey data.
 
