Fix dark mode header color

--- a/knowledge-base/miscellaneous/redem-credits.mdx
+++ b/knowledge-base/miscellaneous/redem-credits.mdx
@@ -35,10 +35,10 @@ The following list provides a clear overview of how credits are calculated based
 <table>
   <thead>
     <tr>
-      <th style={{border: '1px solid #e3e3e3', padding: '10px', backgroundColor: '#F0F0F0', textAlign: 'left'}}>Score Type</th>
-      <th style={{border: '1px solid #e3e3e3', padding: '10px', backgroundColor: '#F0F0F0', textAlign: 'left'}}>Base Credits</th>
-      <th style={{border: '1px solid #e3e3e3', padding: '10px', backgroundColor: '#F0F0F0', textAlign: 'left'}}>Additional Credits</th>
-      <th style={{border: '1px solid #e3e3e3', padding: '10px', backgroundColor: '#F0F0F0', textAlign: 'left'}}>Maximum Credits</th>
+      <th style={{border: '1px solid #e3e3e3', padding: '10px', textAlign: 'left'}} className="bg-gray-100 dark:bg-gray-800">Score Type</th>
+      <th style={{border: '1px solid #e3e3e3', padding: '10px', textAlign: 'left'}} className="bg-gray-100 dark:bg-gray-800">Base Credits</th>
+      <th style={{border: '1px solid #e3e3e3', padding: '10px', textAlign: 'left'}} className="bg-gray-100 dark:bg-gray-800">Additional Credits</th>
+      <th style={{border: '1px solid #e3e3e3', padding: '10px', textAlign: 'left'}} className="bg-gray-100 dark:bg-gray-800">Maximum Credits</th>
     </tr>
   </thead>
 
