--- a/api-reference/intro/synchronous-response.mdx
+++ b/api-reference/intro/synchronous-response.mdx
@@ -48,10 +48,10 @@ iconType: "regular"
           "minDataPoints":2,
           "categories": {
             "BAD_LANGUAGE": {"activate": true, "minDataPoints":2},
-            "NONSENSE": {"activate": true, "minDataPoints":2},
-            "WRONG_TOPIC": {"activate": true, "minDataPoints":2},
+            "GIBBERISH": {"activate": true, "minDataPoints":2},
+            "OFF_TOPIC": {"activate": true, "minDataPoints":2},
             "WRONG_LANGUAGE": {"activate": true, "minDataPoints":2},
-            "AI_GENERATED_ANSWER": {"activate": true, "minDataPoints":2},
+            "AI_SUSPECT": {"activate": true, "minDataPoints":2},
             // ... other categories ...
           }
         },
