Update response category labels in integration guides
- Replaced outdated response category names in the integration guides for ReDem's data quality checks: "Nonsense" is now "Gibberish", "Wrong Topic" is now "Off Topic", and "AI Generated" is now "AI Suspect".

--- a/integration-guides/decipher.mdx
+++ b/integration-guides/decipher.mdx
@@ -78,9 +78,9 @@ ReDem’s Integration Assistant is designed to make setting up quality checks fo
         2. Recommended Settings for ReDem’s automatic data cleaning
             - We suggest enabling ReDem’s recommended settings for optimal data quality.
             - To give a specific example: We recommend excluding an interview - regardless of other scores - if two or more open-ended questions result in an Open-Ended Score below 40. We also recommend excluding an interview - again, regardless of other scores - if two or more answers to open-ended questions are classified as:
-                - AI Generated
-                - Nonsense
-                - Wrong Topic
+                - AI Suspect
+                - Gibberish
+                - Off Topic
                 - Wrong Language
                 - Bad Language
 
