--- a/integration-guides/keyingress.mdx
+++ b/integration-guides/keyingress.mdx
@@ -53,9 +53,9 @@ This tutorial explains how to connect ReDem with Keyingress to run automated dat
         - **Two or more grid questions** have a Grid-Question Score < 20
         - **Two or more open-ended questions** have an Open-Ended Score < 40
         - **Two or more open-ended answers** are classified as:
-            - AI-Generated
-            - Nonsense
-            - Wrong Topic
+            - AI Suspect
+            - Gibberish
+            - Off Topic
             - Wrong Language
             - Bad Language
         - **Time Score** < 20
