Update response category terminology in cleaning and review documentation
- Changed response category labels for clarity: "Generic Answer" is now "Valid Answer", "No Information" is now "No Answer", "Nonsense" is now "Gibberish", "Wrong Topic" is now "Off Topic", and "AI Generated Answer" is now "AI Suspect". This update ensures consistency across documentation and improves understanding of the cleaning process.

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -28,7 +28,7 @@ Predefined thresholds for R-Score, OES (including Open-Ended Response Categories
 - **Open-Ended Score (OES) & Response Categories:**
   Respondents with an OES below 40 are excluded if they provide at least two open-ended responses.
 
-  Respondents flagged in at least two open-ended responses for wrong language, bad language, fake answer/copy paste, nonsense or wrong topic are excluded.
+  Respondents flagged in at least two open-ended responses for wrong language, bad language, AI suspect, gibberish or off topic are excluded.
 - **Coherence Score (CHS)**: Respondents with a CHS below 30 are excluded.
 - **Grid-Question Score (GQS)**: Respondents with a GQS below 20 and at least two valid grid-question responses are excluded.
 - **Time Score (TS)**: Respondents with a TS below 20 are excluded.
@@ -64,15 +64,15 @@ You can customize the following key quality checks by setting thresholds that de
 
   
   Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
-  - **Generic Answer**
+  - **Valid Answer**
   - **Bad Language**
-  - **No Information**
+  - **No Answer**
   - **Duplicate Respondent**
   - **Duplicate Answer**
-  - **Nonsense**
+  - **Gibberish**
   - **Wrong Language**
-  - **Wrong Topic**
-  - **AI Generated Answer**
+  - **Off Topic**
+  - **AI Suspect**
 
 Here’s an example of a cleaning settings object that can be used to customize the cleaning process via the API:
 
@@ -83,8 +83,8 @@ Here’s an example of a cleaning settings object that can be used to customize 
     "score": 60,
     "minDataPoints":2,
     "categories": {
-      "GENERIC_ANSWER": {"activate": true, "minDataPoints":2},
-      "NO_INFORMATION": {"activate": true, "minDataPoints":3},
+      "VALID_ANSWER": {"activate": true, "minDataPoints":2},
+      "NO_ANSWER": {"activate": true, "minDataPoints":3},
       // ... other categories ...
     }
   },
@@ -130,15 +130,15 @@ As an example, let's consider the cleaning settings applied to a specific respon
     "score": 60,
     "minDataPoints":2,
     "categories": {
-      "GENERIC_ANSWER": {"activate": true, "minDataPoints":2},
-      "NO_INFORMATION": {"activate": true, "minDataPoints":2},
+      "VALID_ANSWER": {"activate": true, "minDataPoints":2},
+      "NO_ANSWER": {"activate": true, "minDataPoints":2},
       "BAD_LANGUAGE": {"activate": false, "minDataPoints":2},
-      "NONSENSE": {"activate": false, "minDataPoints":2},
+      "GIBBERISH": {"activate": false, "minDataPoints":2},
       "DUPLICATE_ANSWER": {"activate": false, "minDataPoints":2},
       "DUPLICATE_RESPONDENT": {"activate": false, "minDataPoints":2},
-      "WRONG_TOPIC": {"activate": false, "minDataPoints":2},
+      "OFF_TOPIC": {"activate": false, "minDataPoints":2},
       "WRONG_LANGUAGE": {"activate": false, "minDataPoints":2},
-      "AI_GENERATED_ANSWER": {"activate": true, "minDataPoints":1}
+      "AI_SUSPECT": {"activate": true, "minDataPoints":1}
     }
   }
 ```
@@ -150,40 +150,40 @@ To better understand how cleaning settings are applied, let's consider different
     **Input:** 
 
     
-    The respondent has a **ReDem Score of 50** and an **OES Score of 60**. They have provided **4 valid answers for OES data points**, **`3 of which are categorized as GENERIC_ANSWER`**.
+    The respondent has a **ReDem Score of 50** and an **OES Score of 60**. They have provided **4 valid answers for OES data points**, **`3 of which are categorized as VALID_ANSWER`**.
 
     **Output:** 
 
     
-    The respondent is **excluded** because their **ReDem Score falls below the threshold**. Additionally, their **OES Score is below the defined threshold**, and they have provided **more than 2 valid answers for OES data points**, with **`3 categorized as GENERIC_ANSWER`**, exceeding the threshold set in the cleaning settings.
+    The respondent is **excluded** because their **ReDem Score falls below the threshold**. Additionally, their **OES Score is below the defined threshold**, and they have provided **more than 2 valid answers for OES data points**, with **`3 categorized as VALID_ANSWER`**, exceeding the threshold set in the cleaning settings.
   </Accordion>
   <Accordion title="Respondent with Low OES Score">
     **Input:** 
 
     
-    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided **2 valid answers for OES data points**, with **`1 categorized as a GENERIC_ANSWER`**.
+    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided **2 valid answers for OES data points**, with **`1 categorized as a VALID_ANSWER`**.
 
     **Output:** 
 
     
     The respondent is **excluded** because their **Open-Ended Score is below the threshold** and they have provided **2 valid answers for OES data points**.
   </Accordion>
-  <Accordion title="Respondent with more `GENERIC_ANSWERS` than the threshold">
+  <Accordion title="Respondent with more `VALID_ANSWERS` than the threshold">
     **Input:** 
 
     
-    The respondent has a **ReDem Score of 70** and an **OES Score of 50**. They have provided **4 valid answers for OES data points**, with **`3 categorized as GENERIC_ANSWER`**.
+    The respondent has a **ReDem Score of 70** and an **OES Score of 50**. They have provided **4 valid answers for OES data points**, with **`3 categorized as VALID_ANSWER`**.
 
     **Output:** 
 
     
-    The respondent is **excluded** despite their **ReDem Score and Open-Ended Score being above the threshold**, because **`more than 2 of their answers are categorized as GENERIC_ANSWER`**, exceeding the threshold defined in the cleaning settings.
+    The respondent is **excluded** despite their **ReDem Score and Open-Ended Score being above the threshold**, because **`more than 2 of their answers are categorized as VALID_ANSWER`**, exceeding the threshold defined in the cleaning settings.
   </Accordion>
   <Accordion title="Respondent who should not be excluded">
     **Input:** 
 
     
-    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided only **one valid OES data point**, which is categorized as a **`GENERIC_ANSWER`**.
+    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided only **one valid OES data point**, which is categorized as a **`VALID_ANSWER`**.
 
     **Output:** 
 
